[gd_scene load_steps=16 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/bg1.jpg" type="Texture" id=3]
[ext_resource path="res://StarParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/planet.glb" type="PackedScene" id=5]
[ext_resource path="res://Scene/BosMonsterSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://asset/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Script/Score.gd" type="Script" id=8]
[ext_resource path="res://Script/Main.gd" type="Script" id=9]
[ext_resource path="res://Scene/Meteor.tscn" type="PackedScene" id=10]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( -0.173648, 0, 0.984808, 0, 1, 0, -0.984808, 0, -0.173648 )
ambient_light_energy = 1.58
glow_enabled = true
glow_bloom = 0.2

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 7 )

[node name="Main" type="Spatial"]
script = ExtResource( 9 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18.3149 )

[node name="Camera" type="Camera" parent="."]
far = 300.0

[node name="EnemySpawner" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -300 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.345381, 0.938463, 0, -0.938463, 0.345381, 0, 11.6345, -15.1063 )

[node name="StarParticles" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -250 )

[node name="planet" parent="." instance=ExtResource( 5 )]
transform = Transform( 20.6644, 17.8691, 0, -17.8691, 20.6644, 0, 0, 0, 27.3189, -70, 25.2944, -255.716 )

[node name="BosMonsterSpawner" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -900 )

[node name="Meteor" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -300 )

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="UserInterface"]
visible = false
margin_left = 44.0
margin_top = 59.0
margin_right = 260.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 3 )
text = "Score :"

[node name="Count" type="Label" parent="UserInterface"]
visible = false
margin_left = 218.0
margin_top = 58.0
margin_right = 434.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 3 )
text = "0"
script = ExtResource( 8 )

[node name="Button" type="Button" parent="UserInterface"]
margin_left = 864.0
margin_top = 48.0
margin_right = 1089.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
action_mode = 0
text = "BACK"

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.2 )

[node name="Label" type="Label" parent="UserInterface/Retry"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -197.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 4 )
text = "GAME OVER


Please enter to retry"
align = 1

[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="pressed" from="UserInterface/Button" to="." method="_on_Button_pressed"]
